# attendance-badgetracking

./: .gitignore  up.sh
.circleci/: config.yml
.github/workflows/: api-workflow.yml  frontend-workflow.yml
api/: .coveragerc  .dmypy.json  Dockerfile  app.py  blueprints.py  config.py  decorators.py  docker-compose.yml  exceptions.py  models.py  requirements-dev.txt  requirements.txt  schemas.py  service.py  up.sh  wsgi.py
api/api/: decorators.py
api/e2e_tests/: conftest.py  test_user.py
api/scripts/: boot.sh  pip-vendor.py  restart.sh  update_pg_password.py  wait-for-postgres.sh
api/src/: decorators.py
api/tests/: conftest.py  test_authn.py  test_user.py  utils.py
badgerer-api/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile~  docker-compose.yml  force-build.txt  mypy.ini  pyproject.toml
badgerer-api/badgerer_api/: __init__.py  app.py  blueprints.py  config.py  decorators.py  exceptions.py  extensions.py  models.py  schemas.py  service.py
badgerer-api/badgerer_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
badgerer-api/e2e_tests/: test_login.py  test_user.py
badgerer-api/scripts/: boot.sh
badgerer-api/stubs/passlib/hash/: argon2.pyi
badgerer-api/tests/: conftest.py  test_authn.py  test_authn.py~  test_user.py  test_user.py~  utils.py
badgerer_frontend/: .babelrc  Dockerfile  package-lock.json  package.json
badgerer_frontend/src/: Client.js  attendance.js  index.js  plans.js  register.js
frontend/: docker-compose.yml  package-lock.json  package.json
frontend/src/: App.js  Client.js  badgetracking.js  (+10 more)
(+538 files in other folders)
