[tool.poetry]
name = "badgerer-api"
version = "0.0.1"
description = "Badgerer backend API"
authors = ["Nick Spain <nicholas.spain96@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
argon2-cffi = "19.1.0"
Flask = "2.2.5"
Flask-Cors = "3.0.8"
Flask-Migrate = "2.5.2"
Flask-SQLAlchemy = "2.4.1"
gunicorn = "19.9.0"
marshmallow = "3.2.1"
passlib = "1.7.1"
psycopg2 = "2.8.3"
PyJWT = "1.7.1"
typed-ast = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "2.8.1"
pytest-mock = "1.11.1"
requests = "2.22.0"
coverage = "4.5.4"
mypy = "0.740"
black = "19.10b0"
sqlalchemy-stubs = "0.2"
flake8 = "^3.7"
pre-commit = "^1.20"
pydocstyle = "^4.0"

[tool.black]
line-length = 79
include = '''
/(
    badgerer_api
  | tests
  | e2e_tests
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
